# torrex

./: Cargo.toml  README.md  flake.nix
.direnv/: flake-profile-1-link
src/: bencode.rs  lib.rs
